# my-agent-app

./: .aiignore  .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.redis.yml  docker-compose.yml  logging_config.py  pyproject.toml  requirements.txt  tools.py
.chainlit/: config.toml
app/: agent.py  app.py  logging_config.py  tools.py
app/.chainlit/: config.toml
app/prompts/: system.md
app/sql/: schema.sql
